[metadata]
description = fastSparseGAMs is a Python package that offers an efficient framework for solving L0-regularized learning problems in sparse generalized additive models (GAMs). Leveraging the L0Learn package, this package introduces two novel algorithms, namely quadratic cuts and dynamic feature ordering, to deliver faster computational speed. Additionally, it comes with a new loss function (exponential loss) for classification.
author = Jiachang Liu
author_email = jiachang.liu@duke.edu
maintainer = Tynan Seltzer
maintainer_email = tynanseltzer@gmail.com
license = MIT
url = https://github.com/tynanseltzer/L0Learn
project_urls =
    Source  = https://github.com/tynanseltzer/L0Learn
    Tracker = https://github.com/tynanseltzer/L0Learn/issues
classifiers=
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 4 - Beta
    Programming Language :: C++
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: POSIX
    Operating System :: MacOS
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    scipy>=1.0.0
    pandas>=1.0.0
    matplotlib

[options.extras_require]
test =
    hypothesis
all =
    %(test)s
[tool:pytest]
addopts = -rsxX -v
testpaths = tests